parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@with.py-7.snap
---
source: parser/src/lexer/mod.rs
description: "async with (\n        a as b, c as d\n):\n    a = 1\n"
input_file: parser/test_data/inputs/one_liners/with.py
---
[
    Token {
        kind: Async,
        value: None,
        start: 0,
        end: 5,
    },
    Token {
        kind: With,
        value: None,
        start: 6,
        end: 10,
    },
    Token {
        kind: LeftParen,
        value: None,
        start: 11,
        end: 12,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 21,
        end: 22,
    },
    Token {
        kind: As,
        value: None,
        start: 23,
        end: 25,
    },
    Token {
        kind: Identifier,
        value: Str(
            "b",
        ),
        start: 26,
        end: 27,
    },
    Token {
        kind: Comma,
        value: None,
        start: 27,
        end: 28,
    },
    Token {
        kind: Identifier,
        value: Str(
            "c",
        ),
        start: 29,
        end: 30,
    },
    Token {
        kind: As,
        value: None,
        start: 31,
        end: 33,
    },
    Token {
        kind: Identifier,
        value: Str(
            "d",
        ),
        start: 34,
        end: 35,
    },
    Token {
        kind: RightParen,
        value: None,
        start: 36,
        end: 37,
    },
    Token {
        kind: Colon,
        value: None,
        start: 37,
        end: 38,
    },
    Token {
        kind: NewLine,
        value: None,
        start: 38,
        end: 39,
    },
    Token {
        kind: Indent,
        value: Indent(
            1,
        ),
        start: 39,
        end: 43,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 43,
        end: 44,
    },
    Token {
        kind: Assign,
        value: None,
        start: 45,
        end: 46,
    },
    Token {
        kind: Integer,
        value: Number(
            "1",
        ),
        start: 47,
        end: 48,
    },
    Token {
        kind: NewLine,
        value: None,
        start: 48,
        end: 49,
    },
    Token {
        kind: Dedent,
        value: Indent(
            1,
        ),
        start: 49,
        end: 49,
    },
]
